# Quest_37_4

Calculator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
TVRemote/: main.cpp  tvremote.cpp  tvremote.ui
TVRemote/TVRemote/: CMakeLists.txt  tvremote.h
VideoPlayer/: Main.qml
VideoPlayer/VideoPlayer/: CMakeLists.txt  main.cpp
